--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "yangforge": ">=0.12.0"
   },
   "devDependencies": {
+    "config": "^1.19.0",
     "mocha": "~2.0.1",
     "should": "~3.1.3"
   },
