--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "config": "^1.19.0",
+    "js-yaml": "^3.5.2",
     "mocha": "~2.0.1",
     "should": "~3.1.3"
   },
