--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
     "allocation"
   ],
   "engines": {
-    "yangforge": ">=0.12.0"
+    "yangforge": ">=0.11.0"
   },
   "devDependencies": {
     "config": "^1.19.0",
     "js-yaml": "^3.5.2",
     "mocha": "~2.0.1",
-    "should": "~3.1.3"
+    "should": "~3.1.3",
+    "yangforge": "^0.11.0"
   },
   "main": "./lib/index.js",
   "scripts": {
-    "prepublish": "yfc build -o lib/index.yaml promise.yaml",
-    "test": "./node_modules/.bin/mocha --require should --compilers coffee:coffee-script/register"
+    "prepublish": "yfc build -o index.yaml promise.yaml",
+    "test": "mocha --require should --compilers coffee:coffee-script/register",
+	"start": "yfc run --express 5050 promise.yaml"
   }
 }
