some internal reorg, move intent code logic into respective spec/ files, remove nfv-mano.yang schema from dependencies, better acess credentials handling, placeholders for openstack related modules and updates, almost ready for functest integration

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "prepublish": "yfc build -o index.yaml promise.yaml",
-    "test": "mocha --require should --compilers coffee:coffee-script/register",
+    "test": "mocha",
 	"start": "yfc run --express 5050 promise.yaml"
   }
 }
