--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -6,12 +6,17 @@ opnfv-functest:
       address: INSTALLER_IP
     lab: NODE_NAME
 
-# OpenStack config (refer to schema/openstack.yang)
+# OpenStack config (native)
 openstack:
   auth:
-    url: OS_AUTH_URL
+    endpoint: OS_AUTH_URL
+    strategy: OS_AUTH_STRATEGY
     tenant:
       id: OS_TENANT_ID
       name: OS_TENANT_NAME
     username: OS_USERNAME
     password: OS_PASSWORD
+  test:
+    image:  OS_TEST_IMAGE
+    flavor: OS_TEST_FLAVOR
+    
