--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "config": "^1.19.0",
     "js-yaml": "^3.5.2",
     "mocha": "~2.0.1",
+    "promise": "^7.1.1",
     "should": "~3.1.3",
     "yangforge": "^0.11.0"
   },
@@ -35,6 +36,6 @@
   "scripts": {
     "prepublish": "yfc build -o index.yaml promise.yaml",
     "test": "mocha",
-	"start": "yfc run --express 5050 promise.yaml"
+    "start": "yfc run --express 5050 promise.yaml"
   }
 }
