--- a/forge.yaml
+++ b/forge.yaml
@@ -1,3 +1,12 @@
+#
+# Author: Peter K. Lee (peter@corenova.com)
+#
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Apache License, Version 2.0
+# which accompanies this distribution, and is available at
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+
 # YF 0.12.x forge manifest
 
 compilers:
