--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@opnfv/promise",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Resource Management for Virtualized Infrastructure",
   "author": "Peter K. Lee <peter@corenova.com>",
   "license": "Apache-2.0",
-  "private": true,
   "homepage": "http://wiki.opnfv.org/promise",
   "repository": "opnfv/promise",
   "keywords": [
@@ -21,21 +20,25 @@
     "capacity",
     "allocation"
   ],
-  "engines": {
-    "yangforge": ">=0.11.0"
+  "dependencies": {
+    "js-yaml": "^3.6.1",
+    "pretty": "^1.0.0",
+    "superagent": "^2.0.0",
+    "treeify": "^1.0.1",
+    "yang-js": "^0.14.7"
   },
   "devDependencies": {
     "config": "^1.19.0",
-    "js-yaml": "^3.5.2",
     "mocha": "~2.0.1",
-    "promise": "^7.1.1",
-    "should": "~3.1.3",
-    "yangforge": "^0.11.0"
+    "should": "~3.1.3"
   },
   "main": "./lib/index.js",
+  "engines": {
+    "yangforge": ">=0.11.0"
+  },
   "scripts": {
-    "prepublish": "yfc build -o index.yaml promise.yaml",
+    "prepublish": "yfc build -o lib/index.js -c src/promise.coffee",
     "test": "mocha",
-    "start": "yfc run --express 5050 promise.yaml"
+    "start": "yfc run --express 5050"
   }
 }
