--- a/package.json
+++ b/package.json
@@ -21,23 +21,34 @@
     "capacity",
     "allocation"
   ],
+  "models": {
+    "ietf-yang-types": "yang-js",
+    "ietf-inet-types": "yang-js",
+    "access-control-models": "./schema/access-control-models.yang",
+    "nfv-infrastructure": "./lib/nfv-infrastructure.js",
+    "openstack-core": "./lib/openstack-core.js",
+    "opnfv-promise": "./lib/opnfv-promise.js"
+  },
   "dependencies": {
     "node-uuid": "^1.4.7",
     "superagent": "^2.0.0",
-    "yang-js": "^0.14.13"
+    "yang-js": "^0.14.16"
   },
   "devDependencies": {
+    "coffee-script": ">=1.7.0",
     "config": "^1.19.0",
     "mocha": "~2.0.1",
+    "rimraf": "^2.5.2",
     "should": "~3.1.3"
   },
   "main": "./lib/index.js",
-  "engines": {
-    "yangforge": ">=0.11.0"
-  },
   "scripts": {
-    "prepublish": "yfc build -o lib/index.js -c src/promise.coffee",
-    "test": "mocha",
-    "start": "yfc run --express 5050"
+    "clean": "rimraf dist/* lib/*",
+    "prebuild": "npm run clean -s && mkdir -p dist",
+    "build:src": "coffee -o lib -c src",
+    "build": "npm run build:src",
+    "prepublish": "npm run build",
+    "pretest": "npm run build",
+    "test": "mocha"
   }
 }
